--- a/nowcoder_X/牛客网题目整理.md
+++ b/nowcoder_X/牛客网题目整理.md
@@ -54,10 +54,159 @@ public class Derived extends Base{
     
 > 解析：dst=new String (src,”GBK”).getbytes(“UTF-8”)
 
+---
+
+（7）public class Test3{
+     public static void main(String args[]){
+        System.out.println(100%3);
+        System.out.println(100%3.0);
+     }
+    }
+
+>   输出：1 和 1.0  解释：在进行运算时，基本类型会自动转型成容量更大的一种类型。所以 100 % 3.0  -> 100.0  % 3.0 即 int转成 float
+
+---
+
+（8）关于中间件特点的描述.不正确的是（）
+
+    中间件运行于客户机/服务器的操作系统内核中，提高内核运行效率
+    
+    
+---
+
+（9）void waitForSignal()
+    {
+        Object obj = new Object();
+        synchronized(Thread.currentThread())
+        {
+            obj.wait();
+            obj.notify();
+        }
+    }
+    Which statement is true?
+    
+    解析：This code may throw an InterruptedException.
+    第一个错误是 wait() 方法要以 try/catch 包覆，或是掷出 InterruptedException 才行   
+    因此答案就是因为缺少例外捕捉的   InterruptedException
+    第二个错误的地方是， synchronized 的目标与 wait() 方法的物件不相同，会有 IllegalMonitorStateException ，不过 InterruptedException 会先出现，所以这不是答案
+
+ ---
+ 
+（10）以下代码将打印出
+
+     public static void main (String[] args) { 
+        String classFile = "com.jd.". replaceAll(".", "/") + "MyClass.class";
+        System.out.println(classFile);
+    }
+
+    解析：///////MyClass.class        原因：由于replaceAll方法的第一个参数是一个正则表达式，而"."在正则表达式中表示任何字符，所以会把前面字符串的所有字符都替换成"/"。如果想替换的只是"."，那么久要写成"\\.".
+ 
+ ---
+ 
+（11）如果一个接口Cow有个方法drink()，有个类Calf实现接口Cow，则在类Calf中正确的是？  ( )
+
+    解析：public void drink() { …} .  因为接口中的所有方法默认都是 public abstract 的，而根据约定，实现父类的方法时，访问权限只能更加的宽泛。所以，实现接口的时候，因为接口中默认的是public ，所以实现该方法的也必须是 public。而且，接口中只有常量，默认的是 public static final 。
+    
+  ---
+  
+（12）class X{
+        Y y=new Y();
+        public X(){
+            System.out.print("X");
+        }
+    }
+    class Y{
+        public Y(){
+            System.out.print("Y");
+        }
+    }
+    public class Z extends X{
+        Y y=new Y();
+        public Z(){
+            System.out.print("Z");
+        }
+        public static void main(String[] args) {
+            new Z();
+        }
+    }
+    
+    执行结果：YXYZ.
+    
+    初始化过程： 
+    1. 初始化父类中的静态成员变量和静态代码块 ； 
+    2. 初始化子类中的静态成员变量和静态代码块 ； 
+    3.初始化父类的普通成员变量和代码块，再执行父类的构造方法；
+    4.初始化子类的普通成员变量和代码块，再执行子类的构造方法；     
+    （1）初始化父类的普通成员变量和代码块，执行  Y y=new Y();  输出Y 
+    （2）再执行父类的构造方法；输出X
+    （3） 初始化子类的普通成员变量和代码块，执行  Y y=new   Y();  输出Y 
+    （4）再执行子类的构造方法；输出Z
+ 
+---
+
+(13)    
+    创建泛型对象时请指明类型，让编译器尽早的做参数检查 （T）
+    泛型的类型擦除机制意味着不能在运行时动态获取List<T>中T的实际类型    （F）
+    
+    解析：   可以通过反射机制T的实际类型.ParameterizedType pt = (ParameterizedType) this.getClass().getGenericSuperclass();
+            T的真是类型 = (Class) pt.getActualTypeArguments()[0];
+            
+---   
+   
+(14) public abstract class Test {
+        abstract void method() {
+        }
+    }
+    
+    解析：声明错误.  因为抽象方法没有方法体，只有声明. 应为 ： abstract void method();
+    
+ ---
+ 
+ (15) try catch finally 的关于返回值得问题？
+    
+    	try {
+			int i=0;
+			if(i==0) {
+				throw new RuntimeException("");
+			}
+			return "try";
+		} catch (Exception e) {
+			return "catch";
+		}finally {
+    //		return "finally";
+		}
+ 
+    解析：当finally中没有return语句时，结果会返回catch 或者 try语句块里面的 return 结果. 而当有finally时，最终都会只返回 finally中的值.
+    
+---
+
+(16) java语言鲁棒性特点的是:
+
+    解析：鲁棒性指的是程序的健壮性.
+    java能检查程序在编译和运行时的错误
+    java自己操纵内存减少了内存出错的可能性
+    java还实现了真数组，避免了覆盖数据的可能
+    
+    java能运行虚拟机实现跨平台，这个和java鲁棒性的特点无关.
+
+---
+
+(17) 局部变量不能被 static 修饰. static修饰变量和方法，为类的类变量和类方法，所有类实例共享一份该类变量和类方法。类方法中显然不能调用非static修饰的方法或者变量。非类方法中不能有静态变量.
 
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+    
   [1]: https://uploadfiles.nowcoder.net/images/20170711/6863719_1499741731233_5F07387D61B2FE3164FB8B079FE0376B
